# alice

./: .env.example  README.md  fresh-push.ps1  fresh-push.sh  pyproject.toml  requirements.txt  run.py  vercel.json
.github/workflows/: cd.yml  ci.yml
cloud/: Dockerfile  requirements.txt
cloud/auth/: __init__.py  jwt.py
cloud/grpc/: handlers.py  server.py
cloud/proto/: __init__.py  nexxtts.proto  nexxtts_pb2.py  nexxtts_pb2_grpc.py
cloud/serverless/: __init__.py  vercel.py
cloud/tests/: test_auth.py  test_grpc.py  test_health.py
core/: __init__.py
core/billing/: __init__.py  stripe.py
core/db/: __init__.py  base.py  models.py  repository.py
core/db/migrations/: 001_initial_schema.sql
core/db/tests/: test_repository.py
core/monitoring/: health.py  metrics.py
core/security/: __init__.py  api_keys.py  rate_limit.py
core/security/tests/: test_api_keys.py  test_rate_limit.py
core/tests/: test_billing.py  test_monitoring.py
docs/: api-reference.md  quickstart.md
docs/superpowers/plans/: 2026-04-25-stripe-billing.md
nexxtts/: __init__.py
sdk/python/: __init__.py  client.py
vibevoice/: __init__.py
vibevoice/modular/: modular_vibevoice_text_tokenizer.py  modular_vibevoice_tokenizer.py
vibevoice/nexxtts/: __init__.py
vibevoice/nexxtts/asr/: __init__.py  client.py  test_client.py
vibevoice/nexxtts/tts/: __init__.py  client.py  simple.py  test_client.py
vibevoice/nexxtts/voices/: __init__.py  manager.py  test_manager.py
