[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexxtts-serverless"
version = "0.1.0"
description = "NexTTS Serverless API"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "werkzeug>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "stripe>=7.0",
    "prometheus-client>=0.19",
    "psutil>=5.9",
    "python-dotenv>=1.0",
]